--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 1200px;
 
     mat-card {
         width: 270px;
@@ -9,10 +8,15 @@
 
         img {
             max-height: 170px;
+            width: 100%;
         }
     
         a {
             text-decoration: none !important;
+        }
+
+        .tag {
+            color: #c552d9;
         }
     }
 }
