--- a/src/app/pages/code-snippets/code-snippets.component.scss
+++ b/src/app/pages/code-snippets/code-snippets.component.scss
@@ -1,3 +1,8 @@
+.container {
+    max-width: 900px;
+    margin: 5px;
+}
+
 mat-card {
     margin: 10px;
 
@@ -8,6 +13,12 @@ mat-card {
 
 @media screen and (max-width: 400px) {
     mat-card {
-        max-width: 300px;
+        max-width: 370px;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .container {
+        max-width: 1200px;
     }
 }
