--- a/src/app/pages/courses/courses.component.scss
+++ b/src/app/pages/courses/courses.component.scss
@@ -1,7 +1,16 @@
-mat-card {
-    margin: 10px;
+.container {
+    max-width: 900px;
+    mat-card {
+        margin: 10px;
 
-    a {
-        text-decoration: none !important;
+        a {
+            text-decoration: none !important;
+        }
+    }
+}
+
+@media (min-width: 1800px) {
+    .container {
+        max-width: 1000px;
     }
 }
