--- a/src/app/pages/public-talks/public-talks.component.scss
+++ b/src/app/pages/public-talks/public-talks.component.scss
@@ -1,7 +1,8 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 940px;
+    max-width: 900px;
+    margin: 5px;
 
     mat-card {
         width: 100%;
@@ -21,13 +22,19 @@
 
 @media screen and (max-width: 400px) {
     .container {
-        width: 90%;
+        // width: 90%;
         max-width: unset;
         flex-wrap: wrap;
 
         iframe {
-            height: 100px;
+            height: 120px !important;
             width: 100%;
         }
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .container {
+        max-width: 1200px;
     }
 }
