--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
+// @use '~@angular/material' as mat;
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/prebuilt-themes/purple-green.css';
 @import '~github-calendar/dist/github-calendar.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
-a {
+a:not([mat-button]):not([mat-tooltip]) {
     color: #c552d9;
     text-decoration: none;
 }
@@ -14,5 +18,9 @@ a {
 .location {
     text-decoration: underline !important;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
+}
+
+mat-card-title {
+    color: #fff;
 }
