--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@ mat-toolbar {
             color: #fff;
             font-size: 18px;
             font-weight: 500;
-            margin: 0 10px;
+            margin: 0 7px;
             transition: all 0.3s ease-in-out;
             cursor: pointer;
 
@@ -40,6 +40,19 @@ mat-toolbar {
         margin-top: 10px;
         margin-left: 200px;
         max-width: 270px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .bio {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            h2 {
+                text-align: center;
+            }
+        }
 
         .icon-btn {
             color: rgb(61, 60, 60);
@@ -52,7 +65,9 @@ mat-toolbar {
             background-color: #fff;
             display: block;
             margin-bottom: 20px;
-        }   
+            box-shadow: #bda1dd 2px 2px 3px;
+            border: solid #bda1dd 1px
+        }
     }
 }
 
@@ -69,23 +84,98 @@ mat-toolbar {
     cursor: pointer;
 }
 
-@media screen and (max-width: 400px) {
-    aside {
-        width: 99%;
-        margin: auto !important;
-        padding-top: 10px;
-        max-width: 320px !important;
+@media screen and (min-width: 500px) and (max-width: 800px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
 
-        img {
-            height: 290px !important;
-            width: 290px !important;
+        .pfp {
+            width: 235px !important;
+            height: 235px !important;
+        }
+
+        .bio {
+            padding: 7px;
+            height: 330px !important;
+            // overflow: visible;
+            // direction: rtl;
+
+            // p:not(.social-links) {
+            //     text-align: center;
+            // }
+
+            height: 400px;
+
+            .social-links {
+                position: absolute;
+                width: 120%;
+                bottom: -20% !important;
+                right: -10%;
+                text-align: center ;
+            }
         }
     }
 
+    aside {
+        width: 99% !important;
+        padding-top: 3px;
+        margin-left: 10px !important;
+        display: flex !important;
+        flex-direction: row !important;
+        align-items: flex-start !important;
+        max-width: unset !important;
+    }
+
+    .burger {
+        display: block !important;
+    }
+
+    .links {
+        display: none;
+    }
+
+    .menu {
+        width: 95% !important;
+        align-items: center !important;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    mat-toolbar {
+        position: fixed;
+        z-index: 100;
+    }
     .container {
-        width: 90%;
+        padding-top: 50px;
+        aside {
+            width: 99%;
+            margin: auto !important;
+            padding-top: 10px;
+            max-width: 320px !important;
+
+            .bio {
+                padding: 5px;
+
+                p {
+                    text-align: center;
+                }
+            }
+
+            img {
+                height: 290px !important;
+                width: 290px !important;
+            }
+
+        }
+    }
+
+    main {
+        max-width: 100%;
+    }
+
+    .container {
         max-width: unset;
-        margin-right: -10px;
         flex-wrap: wrap;
     }
 
@@ -95,7 +185,7 @@ mat-toolbar {
 
     mat-toolbar {
         padding: 0px;
-        
+
         .menu {
             display: flex;
             margin: 2px;
@@ -110,5 +200,4 @@ mat-toolbar {
     .burger {
         display: block !important;
     }
-    
 }
