--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -7,10 +7,12 @@
         margin: 10px;
 
         img {
-            max-height: 170px;
-            width: 100%;
+            height: 120px;
+            width: 270px;
+            object-fit: cover;
+            object-position: 50% 90%;
         }
-    
+
         a {
             text-decoration: none !important;
         }
@@ -21,12 +23,28 @@
     }
 }
 
+@media screen and (min-width: 500px) and (max-width: 800px) {
+    .container {
+        width: 89%;
+        margin: auto;
+    }
+}
+
 @media screen and (max-width: 400px) {
     .container {
         width: 100%;
 
         mat-card {
             width: 100%;
+
+            img {
+                    height: 140px;
+                    width: 100%;
+                    object-fit: cover;
+                    border-top-left-radius: 5px;
+                    border-top-right-radius: 5px;
+                    object-position: 50% 100%;
+                }
         }
     }
 }
