--- a/src/app/pages/open-source/open-source.component.html
+++ b/src/app/pages/open-source/open-source.component.html
@@ -1,10 +1,13 @@
-<h1>Open Source</h1>
-
-<p>I have contributed to several open source projects, mainly to 
-    <a href="https://github.com/ngrx/platform" target="_blank">NgRx</a>, and also made some minor contributions 
-    to <a href="https://github.com/ReactiveX/rxjs" target="_blank">RxJS</a>. I also wrote a small library of custom operators for 
-    RxJS called
-    <a href="https://www.npmjs.com/package/sareer" target="_blank">sareer</a>
-</p>
-
-<div id="github-calendar"></div>
+<div class="container">
+    <h1>Open Source</h1>
+    
+    <p>I have contributed to several open source projects, mainly to
+        <a href="https://github.com/ngrx/platform" target="_blank">NgRx</a>, and also made some minor contributions
+        to <a href="https://github.com/ReactiveX/rxjs" target="_blank">RxJS</a>. I also wrote a small library of custom
+        operators for
+        RxJS called
+        <a href="https://www.npmjs.com/package/sareer" target="_blank">sareer</a>
+    </p>
+    
+    <div id="github-calendar"></div>
+</div>
