--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 // @use '~@angular/material' as mat;
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/prebuilt-themes/purple-green.css';
-@import '~github-calendar/dist/github-calendar.css';
+// @import '~@angular/material/prebuilt-themes/purple-green.css';
+// @import '~github-calendar/dist/github-calendar.css';
 
 html, body { height: 100%; width: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
