--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-latest-news></app-latest-news>
     <mat-card *ngFor="let article of articles" matTooltip="Read Article" color="primary">
         <a [href]="article.link" target="_blank">
             <img mat-card-image [src]="article.img" [alt]="'Article cover for: ' + article.title">
