--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,14 @@
 mat-toolbar {
     box-shadow: #bda1dd 2px 5px 5px;
+    background-color: #7b1fa2;
+    height: 50px;
 
     .menu {
         width: 80%;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         a {
             text-decoration: none;
