--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -2,7 +2,7 @@
     <app-latest-news></app-latest-news>
     <mat-card *ngFor="let article of articles" matTooltip="Read Article" color="primary">
         <a [href]="article.link" target="_blank">
-            <img mat-card-image [src]="article.img" [alt]="'Article cover for: ' + article.title">
+            <img mat-card-image [ngSrc]="article.img" height="120" width="270" [alt]="'Article cover for: ' + article.title">
             <mat-card-header>
                 <mat-card-title>{{ article.title }}</mat-card-title>
                 <mat-card-subtitle>{{ article.date | date }}</mat-card-subtitle>
