--- a/src/app/pages/code-snippets/code-snippets.component.scss
+++ b/src/app/pages/code-snippets/code-snippets.component.scss
@@ -5,6 +5,10 @@
     mat-card {
         margin: 10px;
 
+        mat-card-subtitle {
+            color: #c552d9;
+        }
+
         a {
             text-decoration: none !important;
         }
