--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,5 +1,6 @@
 <div class="blog-posts-container">
-    <div *ngFor="let post of blogPosts" class="blog-post">
+    @for (post of blogPosts; track post) {
+  <div class="blog-post">
         <div class="image-container">
             <img [ngSrc]="'assets/images/cover-photos/' + post.cover" width="240" height="190" [alt]="post.title"/>
         </div>
@@ -13,13 +14,16 @@
             <p>{{post.description}}</p>
             <a class="read-more" [routerLink]="['/blog', post.slug]">Read more</a>
             <div class="tags">
-                <a *ngFor="let tag of post.tags" class="tag" [href]="tag.link" mat-stroked-button target="_blank" [matTooltip]="tag.link ? 'Read Docs' : ''">
+                @for (tag of post.tags; track tag) {
+  <a class="tag" [href]="tag.link" mat-stroked-button target="_blank" [matTooltip]="tag.link ? 'Read Docs' : ''">
                     <span>#{{tag.name}}</span>
                 </a>
+}
             </div>
             <div class="post-meta">
             </div>
         </div>
     </div>
+}
 </div>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
