--- a/src/app/pages/podcasts/podcasts.component.html
+++ b/src/app/pages/podcasts/podcasts.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <h1>Podcasts</h1>
-    <mat-card *ngFor="let podcast of podcasts" matTooltip="Listen to Podcast">
+    @for (podcast of podcasts; track podcast) {
+  <mat-card matTooltip="Listen to Podcast">
         <a [href]="podcast.link" target="_blank">
             <div class="image-container">
                 <img mat-card-image [src]="'assets/images/podcast-photos/' + (podcast.image ?? 'default-podcast.jpeg')"
@@ -15,11 +16,14 @@
                     <p>{{ podcast.description }}</p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <a *ngFor="let tag of podcast.tags" [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
+                    @for (tag of podcast.tags; track tag) {
+  <a [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
                         <span>#{{tag.name}}</span>
                     </a>
+}
                 </mat-card-actions>
             </div>
         </a>
     </mat-card>
+}
 </div>
