--- a/src/app/pages/public-talks/public-talks.component.html
+++ b/src/app/pages/public-talks/public-talks.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <h1>Public Talks</h1>
-    <mat-card *ngFor="let talk of talks">
+    @for (talk of talks; track talk) {
+  <mat-card>
         <mat-card-content>
             <iframe [src]="talk.link | sanitize" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -9,10 +10,13 @@
             <mat-card-title>{{ talk.title }}</mat-card-title>
             <mat-card-subtitle>{{ talk.description }}</mat-card-subtitle>
             <mat-card-actions>
-                <a *ngFor="let tag of talk.tags" [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
+                @for (tag of talk.tags; track tag) {
+  <a [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
                     <span>#{{tag.name}}</span>
                 </a>
+}
             </mat-card-actions>
         </mat-card-content>
     </mat-card>
+}
 </div>
