--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <app-latest-news></app-latest-news>
+    <app-announcement/>
     @for (article of articles; track article) {
   <mat-card matTooltip="Read Article" color="primary">
         <a [href]="article.link" target="_blank">
