--- a/src/app/pages/podcasts/podcasts.component.html
+++ b/src/app/pages/podcasts/podcasts.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <h1>Podcasts</h1>
     @for (podcast of podcasts; track podcast) {
-  <mat-card matTooltip="Listen to Podcast">
+    <mat-card matTooltip="Listen to Podcast">
         <a [href]="podcast.link" target="_blank">
             <div class="image-container">
                 <img mat-card-image [src]="'assets/images/podcast-photos/' + (podcast.image ?? 'default-podcast.jpeg')"
-                    [alt]="'Image for ' + podcast.title" />
+                    [alt]="'Image for ' + podcast.title" [ngClass]="{'default-image': !podcast.image}" />
             </div>
             <div class="podcast-content">
                 <mat-card-header>
@@ -17,13 +17,13 @@
                 </mat-card-content>
                 <mat-card-actions>
                     @for (tag of podcast.tags; track tag) {
-  <a [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
+                    <a [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
                         <span>#{{tag.name}}</span>
                     </a>
-}
+                    }
                 </mat-card-actions>
             </div>
         </a>
     </mat-card>
-}
+    }
 </div>
