--- a/src/app/pages/podcasts/podcasts.component.scss
+++ b/src/app/pages/podcasts/podcasts.component.scss
@@ -31,6 +31,11 @@
                     height: 180px;
                     object-fit: fill;
                 }
+
+                img.default-image {
+                    height: 160px !important;
+                    width: 160px !important;
+                }
             }
             
             div:not(.image-container) {
