--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,31 +2,48 @@
   <mat-sidenav [(opened)]="sidenavOpen" position="end" mode="push">
     <mat-nav-list>
       @for (link of siteLinks; track link.name) {
-  <a mat-list-item [activated]="linkRef.isActive" [routerLink]="link.url"
-        routerLinkActive #linkRef="routerLinkActive">
+      <a
+        mat-list-item
+        [activated]="linkRef.isActive"
+        [routerLink]="link.url"
+        routerLinkActive
+        #linkRef="routerLinkActive"
+      >
         <span class="mobile-link">
-          <mat-icon>{{ link.icon }}</mat-icon>{{ link.name }}
+          <mat-icon>{{ link.icon }}</mat-icon
+          >{{ link.name }}
         </span>
       </a>
-}
+      }
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <div class="menu">
-        <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="heading">Armen
-          Vardanyan | GDE</a>
+        <a
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="heading"
+          >Armen Vardanyan | GDE</a
+        >
         <div>
           <div class="links">
             @for (link of siteLinks; track link) {
-  <a mat-button [routerLink]="link.url" routerLinkActive="active">
-              <mat-icon>{{ link.icon }}</mat-icon>{{ link.name }}
+            <a mat-button [routerLink]="link.url" routerLinkActive="active">
+              <mat-icon>{{ link.icon }}</mat-icon
+              >{{ link.name }}
             </a>
-}
+            }
           </div>
 
           <div class="burger">
-            <button mat-icon-button aria-label="Menu Button" matTooltip="Menu" (click)="sidenavOpen = true">
+            <button
+              mat-icon-button
+              aria-label="Menu Button"
+              matTooltip="Menu"
+              (click)="sidenavOpen = true"
+            >
               <mat-icon>menu</mat-icon>
             </button>
           </div>
@@ -35,8 +52,15 @@
     </mat-toolbar>
     <div class="container">
       @if (sideBarVisible$ | async) {
-<aside>
-        <img class="pfp" alt="main picture" width="235" height="235" ngSrc="assets/images/pfp.avif" priority/>
+      <aside>
+        <img
+          class="pfp"
+          alt="main picture"
+          width="235"
+          height="235"
+          ngSrc="assets/images/pfp.avif"
+          priority
+        />
         <div class="bio">
           <h1>Armen Vardanyan</h1>
           <h2>Google Developer Expert for Angular</h2>
@@ -44,22 +68,28 @@
             Principal Frontend Developer at
             <a href="https://volo.global/" target="_blank">VOLO</a>, JavaScript
             mentor, technical writer at
-            <a href="https://dev.to/this-is-learning" target="_blank">This is Learning</a>, <a
-              href="https://dev.to/this-is-angular">This is Angular</a>, and
+            <a href="https://dev.to/this-is-learning" target="_blank"
+              >This is Learning</a
+            >, <a href="https://dev.to/this-is-angular">This is Angular</a>, and
             <a href="https://indepth.dev/" target="_blank">InDepth</a>. I also
             appear on the
-            <a href="https://adventuresinangular.com/" target="_blank">Adventures in Angular</a>
+            <a href="https://adventuresinangular.com/" target="_blank"
+              >Adventures in Angular</a
+            >
             podcast from time to time as a panelist.
           </p>
 
           <p>
-            I enjoy cooking, history, football, math, geology, chess, and the occasional
-            beer.
+            I enjoy cooking, history, football, math, geology, chess, and the
+            occasional beer.
           </p>
 
           <p>
-            <a href="https://www.google.com/maps/place/Yerevan,+Armenia/@40.1535005,44.4185274,12z/data=!3m1!4b1!4m5!3m4!1s0x406aa2dab8fc8b5b:0x3d1479ae87da526a!8m2!3d40.1872023!4d44.515209"
-              target="_blank" class="location">
+            <a
+              href="https://www.google.com/maps/place/Yerevan,+Armenia/@40.1535005,44.4185274,12z/data=!3m1!4b1!4m5!3m4!1s0x406aa2dab8fc8b5b:0x3d1479ae87da526a!8m2!3d40.1872023!4d44.515209"
+              target="_blank"
+              class="location"
+            >
               <mat-icon svgIcon="marker"></mat-icon>
               <span>Yerevan, Armenia</span>
             </a>
@@ -68,16 +98,22 @@
           <p class="social-links">
             <a>
               @for (link of links; track link) {
-  <a mat-icon-button class="icon-btn" [href]="link.url" [matTooltip]="link.title"
-                [attr.aria-label]="'Link to ' + link.title" target="_blank">
+              <a
+                mat-icon-button
+                class="icon-btn"
+                [href]="link.url"
+                [matTooltip]="link.title"
+                [attr.aria-label]="'Link to ' + link.title"
+                target="_blank"
+              >
                 <mat-icon [svgIcon]="link.name"></mat-icon>
               </a>
-}
+              }
             </a>
           </p>
         </div>
       </aside>
-}
+      }
       <main>
         <router-outlet></router-outlet>
       </main>
@@ -86,8 +122,13 @@
 </mat-sidenav-container>
 
 @if (hasScroll$ | async) {
-<button mat-fab id="scrollToTop" (click)="scrollToTop()" matTooltip="Scroll to Top"
-  matTooltipPosition="left">
+<button
+  mat-fab
+  id="scrollToTop"
+  (click)="scrollToTop()"
+  matTooltip="Scroll to Top"
+  matTooltipPosition="left"
+>
   <mat-icon>arrow_upward</mat-icon>
 </button>
 }
