--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,21 +1,35 @@
 <div class="container">
-    <app-announcement/>
+  <app-announcement />
+  <div class="card-wrapper">
     @for (article of articles; track article) {
-  <mat-card matTooltip="Read Article" color="primary">
-        <a [href]="article.link" target="_blank">
-            <img mat-card-image [ngSrc]="article.img" height="120" width="270" [alt]="'Article cover for: ' + article.title">
-            <mat-card-header>
-                <mat-card-title>{{ article.title }}</mat-card-title>
-                <mat-card-subtitle>{{ article.date | date }}</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-actions>
-                @for (tag of article.tags; track tag) {
-  <a class="tag" [href]="tag.link" mat-button target="_blank" matTooltip="Read Docs">
-                    <span>#{{tag.name}}</span>
-                </a>
-}
-            </mat-card-actions>
-        </a>
+    <mat-card matTooltip="Read Article" color="primary">
+      <a [href]="article.link" target="_blank">
+        <img
+          mat-card-image
+          [ngSrc]="article.img"
+          height="120"
+          width="270"
+          [alt]="'Article cover for: ' + article.title"
+        />
+        <mat-card-header>
+          <mat-card-title>{{ article.title }}</mat-card-title>
+          <mat-card-subtitle>{{ article.date | date }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions>
+          @for (tag of article.tags; track tag) {
+          <a
+            class="tag"
+            [href]="tag.link"
+            mat-button
+            target="_blank"
+            matTooltip="Read Docs"
+          >
+            <span>#{{ tag.name }}</span>
+          </a>
+          }
+        </mat-card-actions>
+      </a>
     </mat-card>
-}
+    }
+  </div>
 </div>
