--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -1,50 +1,52 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
+  .card-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(calc(100% / 4), 1fr));
+    grid-gap: 10px;
+  }
+  mat-card {
+    width: 270px;
+    margin: 10px;
 
-    mat-card {
-        width: 270px;
-        margin: 10px;
-
-        img {
-            height: 120px;
-            width: 270px;
-            object-fit: cover;
-            object-position: 50% 90%;
-        }
-
-        a {
-            text-decoration: none !important;
-        }
-
-        .tag {
-            color: #c552d9;
-        }
+    img {
+      height: 120px;
+      width: 270px;
+      object-fit: cover;
+      object-position: 50% 90%;
     }
+
+    a {
+      text-decoration: none !important;
+    }
+
+    .tag {
+      color: #c552d9;
+    }
+  }
 }
 
 @media screen and (min-width: 500px) and (max-width: 800px) {
-    .container {
-        width: 89%;
-        margin: auto;
-    }
+  .container {
+    width: 89%;
+    margin: auto;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .container {
+  .container {
+    width: 100%;
+
+    mat-card {
+      width: 100%;
+
+      img {
+        height: 140px;
         width: 100%;
-
-        mat-card {
-            width: 100%;
-
-            img {
-                    height: 140px;
-                    width: 100%;
-                    object-fit: cover;
-                    border-top-left-radius: 5px;
-                    border-top-right-radius: 5px;
-                    object-position: 50% 100%;
-                }
-        }
+        object-fit: cover;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        object-position: 50% 100%;
+      }
     }
+  }
 }
